--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==2.2.14
 gunicorn==20.0.4
 psycopg2-binary==2.7.7
 pytz==2020.1
+requests
 selenium==3.141.0
 sqlparse==0.3.1
 urllib3==1.25.9
